--- a/Hiremi/Hiremiapp/templates/dashboard.html
+++ b/Hiremi/Hiremiapp/templates/dashboard.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/861ce09321.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" ></script>
+    <script>
+        $(document).ready(function(){
+            $('#btn').click(function(){
+                $('header nav ul').toggleClass('show');
+            });
+        })
+    </script>
 
     <title>State Ranking</title>
     <link rel="stylesheet" href="{% static "css/dashboard.css" %}">
@@ -16,12 +24,7 @@
         <p>Super Admin</p>
         <nav>
            
-                <input type="checkbox" id="check">
-                <label for="check">
-               <i class="fa-solid fa-bars" id="btn"></i>
-               <i class="fa-regular fa-circle-xmark" id="cancel"></i>
-               </label>
-
+               
                <ul>
                 <li></li>
                 <li><a href="{% url "dashboard" %}"><i class='bx bx-home-alt'></i> Dashboard</a></li>
@@ -37,6 +40,12 @@
                 <li><a href="#"><i class="fa-regular fa-user"></i> Admin Settings</a></li>
                 <li><a href="{% url "superuser_logout" %}"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a></li>
             </ul>
+            
+                <label id="btn">
+               <i class="fa-solid fa-bars" ></i>
+         
+               </label>
+
         </nav>
     </header>
     <div class="search">
